--- a/TopIndicators/TopIndicators.csproj
+++ b/TopIndicators/TopIndicators.csproj
@@ -126,64 +126,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Frm_DeletarDemanda.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_DeletarDemanda.Designer.cs">
-      <DependentUpon>Frm_DeletarDemanda.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ListarDemanda.cs" />
-    <Compile Include="DadosDemanda - Cópia .cs" />
-    <Compile Include="Frm_ListarDemanda.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_ListarDemanda.Designer.cs">
-      <DependentUpon>Frm_ListarDemanda.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Frm_FuncDemanda.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_FuncDemanda.Designer.cs">
-      <DependentUpon>Frm_FuncDemanda.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Frm_CadastrarDemanda.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_CadastrarDemanda.Designer.cs">
-      <DependentUpon>Frm_CadastrarDemanda.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Frm_DeletarUsuario.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_DeletarUsuario.Designer.cs">
-      <DependentUpon>Frm_DeletarUsuario.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ProcessarDados.cs" />
-    <Compile Include="ListagemUsuarios.cs" />
-    <Compile Include="DadosUsuarios.cs" />
-    <Compile Include="Frm_ListagemUsuarios.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_ListagemUsuarios.Designer.cs">
-      <DependentUpon>Frm_ListagemUsuarios.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Frm_FuncUsuarios.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Frm_FuncUsuarios.Designer.cs">
-      <DependentUpon>Frm_FuncUsuarios.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Class1.cs" />
+    <Compile Include="ConnectionMariaDB.cs" />
     <Compile Include="Frm_CadastroUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Frm_CadastroUsuario.Designer.cs">
       <DependentUpon>Frm_CadastroUsuario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frm_MenuDemanda.cs">
+    <Compile Include="Frm_Menu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frm_MenuDemanda.Designer.cs">
-      <DependentUpon>Frm_MenuDemanda.cs</DependentUpon>
+    <Compile Include="Frm_Menu.Designer.cs">
+      <DependentUpon>Frm_Menu.cs</DependentUpon>
     </Compile>
     <Compile Include="Frm_Login.cs">
       <SubType>Form</SubType>
@@ -191,39 +146,16 @@
     <Compile Include="Frm_Login.Designer.cs">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="..\..\..\..\Desktop\PROJETO IFSP\IFSP-SEMESTRE4\Linguagem de Programação II\Program.cs">
-      <Link>Program.cs</Link>
-    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Frm_DeletarDemanda.resx">
-      <DependentUpon>Frm_DeletarDemanda.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_FuncDemanda.resx">
-      <DependentUpon>Frm_FuncDemanda.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_CadastrarDemanda.resx">
-      <DependentUpon>Frm_CadastrarDemanda.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Frm_CadastroUsuario.resx">
       <DependentUpon>Frm_CadastroUsuario.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_DeletarUsuario.resx">
-      <DependentUpon>Frm_DeletarUsuario.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_FuncUsuarios.resx">
-      <DependentUpon>Frm_FuncUsuarios.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_ListagemUsuarios.resx">
-      <DependentUpon>Frm_ListagemUsuarios.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Frm_ListarDemanda.resx">
-      <DependentUpon>Frm_ListarDemanda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_Login.resx">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frm_MenuDemanda.resx">
-      <DependentUpon>Frm_MenuDemanda.cs</DependentUpon>
+    <EmbeddedResource Include="Frm_Menu.resx">
+      <DependentUpon>Frm_Menu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -254,7 +186,6 @@
     <None Include="LinqToDB.Templates\T4Model.ttinclude" />
     <None Include="LinqToDB.Templates\Validation.ttinclude" />
     <None Include="packages.config" />
-    <None Include="Properties\DataSources\DadosUsuarios.Usuario.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
