--- a/TopIndicators/TopIndicators.csproj
+++ b/TopIndicators/TopIndicators.csproj
@@ -36,6 +36,46 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.9.0.0, Culture=neutral, PublicKeyToken=0e99375e54769942, processorArchitecture=MSIL">
       <HintPath>..\packages\Portable.BouncyCastle.1.9.0\lib\net40\BouncyCastle.Crypto.dll</HintPath>
@@ -221,6 +261,12 @@
     <Compile Include="Func_Turnos.Designer.cs">
       <DependentUpon>Func_Turnos.cs</DependentUpon>
     </Compile>
+    <Compile Include="indicadores_turno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="indicadores_turno.Designer.cs">
+      <DependentUpon>indicadores_turno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lançar-Producao.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -233,12 +279,7 @@
     <Compile Include="Frm_1_usuario.Designer.cs">
       <DependentUpon>Frm_1_usuario.cs</DependentUpon>
     </Compile>
-    <Compile Include="Listar_Produção.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Listar_Produção.Designer.cs">
-      <DependentUpon>Listar_Produção.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ParadaLinha.cs" />
     <Compile Include="Segurança.cs" />
     <Compile Include="Frm_DeletarDemanda.cs">
       <SubType>Form</SubType>
@@ -379,6 +420,9 @@
     <EmbeddedResource Include="Func_Turnos.resx">
       <DependentUpon>Func_Turnos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="indicadores_turno.resx">
+      <DependentUpon>indicadores_turno.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Lançar-Producao.resx">
       <DependentUpon>Lançar-Producao.cs</DependentUpon>
     </EmbeddedResource>
@@ -412,6 +456,7 @@
     <None Include="LinqToDB.Templates\Validation.ttinclude" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\DadosUsuarios.Usuario.datasource" />
+    <None Include="Properties\DataSources\ListagemDemanda.ListarDemanda.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -427,6 +472,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="LinqToDB.Templates\CopyMe.MySql.tt.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
