--- a/TopIndicators/packages.config
+++ b/TopIndicators/packages.config
@@ -1,9 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Corrected.Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1358.0" targetFramework="net472" />
+  <package id="AngleSharp" version="1.0.7" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="BouncyCastle.Cryptography" version="2.1.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
+  <package id="GemBox.Spreadsheet" version="49.0.1542" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.21.9" targetFramework="net472" />
+  <package id="HarfBuzzSharp" version="7.3.0" targetFramework="net472" />
+  <package id="HarfBuzzSharp.NativeAssets.macOS" version="7.3.0" targetFramework="net472" />
+  <package id="HarfBuzzSharp.NativeAssets.Win32" version="7.3.0" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="JasperServer.Client" version="1.0.7" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.2.6" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.2.6" targetFramework="net472" />
@@ -18,12 +25,16 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1586.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.32.1" targetFramework="net472" />
   <package id="MySqlConnector" version="2.2.5" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="S2Station.JSIntegration" version="0.1.0" targetFramework="net472" />
+  <package id="SkiaSharp" version="2.88.6" targetFramework="net472" />
+  <package id="SkiaSharp.NativeAssets.macOS" version="2.88.6" targetFramework="net472" />
+  <package id="SkiaSharp.NativeAssets.Win32" version="2.88.6" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.1.4" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetStandard" version="1.0.117.0" targetFramework="net472" />
@@ -36,6 +47,7 @@
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
