--- a/TopIndicators/packages.config
+++ b/TopIndicators/packages.config
@@ -3,8 +3,13 @@
   <package id="AngleSharp" version="1.0.7" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="BouncyCastle.Cryptography" version="2.1.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.0.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="EPPlus" version="4.1.0" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
+  <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net472" />
   <package id="GemBox.Spreadsheet" version="49.0.1542" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.21.9" targetFramework="net472" />
   <package id="HarfBuzzSharp" version="7.3.0" targetFramework="net472" />
@@ -44,6 +49,8 @@
   <package id="System.Data.SQLite.EF6" version="1.0.117.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.117.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
